Add dev-only support for local Rell clones via composite build and script